--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,13 +148,7 @@ hr{
     
 }
 
-.caixaLados{
-    display: flex; 
-    justify-content: space-between; 
-    gap: 30px; 
-}
-
- h2{
+h2{
     font-size: 2.5rem;
     line-height: 50px;
     margin-bottom: 20px;
@@ -163,8 +157,73 @@ hr{
     text-align: center;
 }
 
+.caixaLados{
+    /* border: 1px solid red; */
+    display: flex; 
+    justify-content: center;  
+    margin-top: 30px;
+    padding: 20px;
+    gap: 30px; 
+    box-shadow: 2px 1px 3px var(--cor-Primaria);
+
+
+    /* & .left{
+        border: 1px solid red; 
+        width: 100%;
+        text-align: center;
+        
+    }
+
+    & .right{
+        border: 1px solid red; 
+        width: 100%;
+        text-align: center;
+
+        & img{ 
+            width: 500px;
+            height: 300px;
+             
+        }
+    } */
+
+    & .left {   
+        /* border: 1px solid red; */
+        display: flex;
+        align-items: center; 
+        width: 610px;  
+        height: 300px; 
+
+        & p{
+            font-size: 2rem;
+            color: var(--cor-texto-botoes-cinza);
+        }
+    }
+
+    
+ 
+    & .right{  
+        display: flex;
+        justify-content: end;
+        align-items: center; 
+        text-align: right; 
+        width: 610px; 
+        height: 300px;
+        margin-bottom: 50px;
+        /* border: 1px solid red; */
+        
+        & img{ 
+            width: 500px;
+            height: 300px;
+             
+        }
+    }  
+}
+
+
+
   
-section.comoFunciona{
+/* section.comoFunciona{
+   
     height: 350px;
     padding: 20px;
     margin-top: 30px;  
@@ -201,9 +260,9 @@ section.comoFunciona{
              
         }
     }  
-}
+} */
  
-section.comoFunciona{
+/* section.comoFunciona{
       
     & .leftRight{
           
@@ -232,12 +291,39 @@ section.comoFunciona{
             color: var(--cor-texto-botoes-cinza);
         }
     }
-}
+} */
 
-section.comoFunciona.espaco{ 
+/* section.comoFunciona.espaco{ 
     margin-bottom: 50px;
-}
+} */
 
+
+@media (max-width:980px){  
+    
+    main{ 
+        & .rightSide{ 
+            & img{ 
+                width: 400px;
+                height: 300px;
+                 
+            }
+        }
+    }
+
+    .caixaLados{
+        & .right{  
+           
+            
+    
+            & img{ 
+                width: 400px;
+                height: 300px;
+                 
+            }
+        }  
+    }
+    
+}
  
 @media (max-width:850px){ 
  
@@ -247,6 +333,31 @@ section.comoFunciona.espaco{
 
         & .rightSide{
             text-align: center;
+        }
+    }
+
+    .caixaLados{
+        display: flex;
+        flex-direction: column-reverse; 
+        height: 500px;
+        box-shadow: 0px 0px 0px;
+      
+        
+        & .left{
+            width: 100%;
+            
+            text-align: center;
+           
+
+            & p{
+                font-size: 1.7rem;
+                margin-top: -50px;
+            }
+        }
+
+        & .right{
+            justify-content: center;
+            width: 100%;
         }
     }
 }
@@ -302,10 +413,52 @@ section.comoFunciona.espaco{
             
         }
 
-        & .precos{
-            margin-top: 10px;
-            
+        & .botoes{
+            & button{
+                margin-bottom: 10px;
+            }
         }
+ 
+    }
+
+
+    .caixaLados{  
+        /* border: 1px solid red; */
+        height: 400px;
+        width: 250;
+        margin-bottom: 10px;
+        
+        & .left{
+          & p{
+            font-size: 1.5rem;
+            margin-bottom: -90px;
+           
+          }
+        }
+
+        & .right{
+          
+            & img{
+                width: 300px;
+                height: 200px; 
+               
+                
+            }
+        }
+    }
+
+
+}
+
+@media (max-width:393px){ 
+    main{ 
+        
+        & .botoes{
+            & button{
+                margin-bottom: 10px;
+            }
+        }
+ 
        }
 }
 
@@ -315,7 +468,7 @@ section.comoFunciona.espaco{
         & .menus{
             display: none;
         }
-    }
-
-    
+    } 
 }
+
+ 
